[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/cold_area/ColdArea.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 640, 1050 )

[node name="ColdArea" type="Area2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="body_entered" from="." to="." method="_on_ColdArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_ColdArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
